test/language/spec/syntax/invalid/unexpected_token.topo
// TEST: unexpected token at top level
// EXPECT-ERROR: expected

42;
